feat(condo): DOMA-4721 contact export task
* feat(condo): DOMA-4721 init contact export as a task

* feat(condo): DOMA-4721 add ui impl of contact export task

* test(condo): DOMA-4721 add basic tests for ContactExportTask schema

* chore(condo): DOMA-4721 linter issues

* fix(condo): DOMA-4721 change access of ContactExportTask

* test(condo): DOMA-4721 check ContactExportTask result

* chore(condo): DOMA-4721 update migration number

* refactor(condo): DOMA-4721 remove old ExportContactsService

* fix(condo): DOMA-4721 update contactexport xlsx template

* chore(condo): DOMA-4721 update migration number after rebase

* chore(condo): DOMA-4721 change en translations & remove unnecessary todo

* test(condo): DOMA-4721 add security tests

* refactor(condo): DOMA-4721 remove extra logger, add task validation on update & test it

* chore(condo): DOMA-4721 update migration number

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1236,6 +1236,10 @@
   "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.BankSyncTask.progress.description.processing": "Импортированно записей: {imported} из {total}",
   "tasks.BankSyncTask.progress.description.completed": "Файл импортирован",
+  "tasks.ContactExportTask.progress.title": "Выгрузка контактов",
+  "tasks.ContactExportTask.progress.description.preparing": "Подготовка к экспорту",
+  "tasks.ContactExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
+  "tasks.ContactExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
   "OK": "Хорошо",
   "Title": "Заголовок",
   "profile": "Профиль",
@@ -1501,6 +1505,8 @@
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Неверное значение propertyId. Данный дом не принадлежит выбранной организации",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "Окончание работ не может быть раньше начала",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Дата актуальности новости обязательна",
+  "excelExport.header.contacts.forAllTime": "Контакты за всё время",
+  "excelExport.header.contacts.forPeriod": "Контакты за период",
   "excelExport.headers.payments.date": "Дата",
   "excelExport.headers.payments.account": "ЛС",
   "excelExport.headers.payments.address": "Адрес",
@@ -1644,6 +1650,7 @@
   "excelExport.sheetNames.tickets": "Заявки",
   "excelExport.sheetNames.propertyScopes": "Области видимости",
   "excelExport.sheetNames.incidents": "Отключения",
+  "excelExport.sheetNames.contacts": "Контакты",
   "ticketBlankExport.address.unitType.flat": "квартира",
   "ticketBlankExport.address.unitType.parking": "машиноместо",
   "ticketBlankExport.address.unitType.apartment": "апартаменты",
