--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1236,6 +1236,10 @@
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
   "tasks.BankSyncTask.progress.description.processing": "Importing: {imported} из {total}",
   "tasks.BankSyncTask.progress.description.completed": "Import complete",
+  "tasks.ContactExportTask.progress.title": "Exporting contacts",
+  "tasks.ContactExportTask.progress.description.preparing": "Preparing to export contacts",
+  "tasks.ContactExportTask.progress.description.processing": "Contacts exported: {exported} of {total}",
+  "tasks.ContactExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
   "OK": "OK",
   "Title": "Title",
   "profile": "Profile",
@@ -1501,6 +1505,8 @@
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "The end of the works cannot be earlier than the start",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
+  "excelExport.header.contacts.forAllTime": "Contacts for all time",
+  "excelExport.header.contacts.forPeriod": "Contacts for the period",
   "excelExport.headers.payments.date": "Date",
   "excelExport.headers.payments.account": "Account",
   "excelExport.headers.payments.address": "Address",
@@ -1644,6 +1650,7 @@
   "excelExport.sheetNames.tickets": "Tickets",
   "excelExport.sheetNames.propertyScopes": "Property scopes",
   "excelExport.sheetNames.incidents": "Incidents",
+  "excelExport.sheetNames.contacts": "Contacts",
   "ticketBlankExport.address.unitType.flat": "flat",
   "ticketBlankExport.address.unitType.parking": "parking place",
   "ticketBlankExport.address.unitType.apartment": "apartment",
