feat(condo): DOMA-5140 bank account report

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -550,6 +550,9 @@
   "pages.condo.property.id.propertyReportBalance.title": "Баланс дома",
   "pages.condo.property.id.propertyReportBalance.description": "Updated at {dateUpdated}",
   "pages.condo.property.id.propertyReportBalance.buttonTitle": "Open report",
+  "pages.condo.property.id.propertyReport.totalSumTitle": "All {sumItem}",
+  "pages.condo.property.id.propertyReport.chooseReportTitle": "Choose report",
+  "pages.condo.property.id.propertyReport.reportCardTitle": "Property expenses items",
   "pages.condo.property.id.becomeSberClientTitle": "Become Sber client",
   "pages.condo.property.id.setupReportTitle": "Setup report",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Enter value",
