--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -550,6 +550,9 @@
   "pages.condo.property.id.propertyReportBalance.title": "Баланс дома",
   "pages.condo.property.id.propertyReportBalance.description": "Обновлено {dateUpdated}",
   "pages.condo.property.id.propertyReportBalance.buttonTitle": "Открыть отчет",
+  "pages.condo.property.id.propertyReport.totalSumTitle": "Все {sumItem}",
+  "pages.condo.property.id.propertyReport.chooseReportTitle": "Выберите отчет",
+  "pages.condo.property.id.propertyReport.reportCardTitle": "Статьи расходов по дому",
   "pages.condo.property.id.becomeSberClientTitle": "Стать клиентом Сбера",
   "pages.condo.property.id.setupReportTitle": "Настроить отчет",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
