feat(condo): DOMA-5736 added income costItems

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1707,7 +1707,10 @@
   "banking.category.THERMAL_ENERGY.name": "Thermal energy",
   "banking.category.COLD_WATER_SUPPLY.name": "Cold water supply",
   "banking.category.ELECTRIC_ENERGY.name": "Electric energy",
-  "banking.costItem.EMERGENCY_SERVICE.name": "Emergency service",
+  "banking.category.INCOME.name": "Income payments",
+  "banking.costItem.INCOME_FROM_RESIDENT.name": "Income from residents",
+  "banking.costItem.INCOME_FROM_LEGAL.name": "Income from legal entities",
+  "banking.costItem.EMERGENCY_SERVICE.name": "Emergency services",
   "banking.costItem.RENT.name": "Rent",
   "banking.costItem.BANKING_SERVICES.name": "Banking services",
   "banking.costItem.MAINTENANCE_AND_OPERATION.name": "Maintenance and operation",
