--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1707,6 +1707,9 @@
   "banking.category.THERMAL_ENERGY.name": "Тепловая энергия",
   "banking.category.COLD_WATER_SUPPLY.name": "Холодное водоснабжение",
   "banking.category.ELECTRIC_ENERGY.name": "Электрическая энергия",
+  "banking.category.INCOME.name": "Доходные платежи",
+  "banking.costItem.INCOME_FROM_RESIDENT.name": "Доходные платежи от физ. лиц",
+  "banking.costItem.INCOME_FROM_LEGAL.name": "Доходные платежи от юр. лиц",
   "banking.costItem.EMERGENCY_SERVICE.name": "Аварийное обслуживание",
   "banking.costItem.RENT.name": "Аренда",
   "banking.costItem.BANKING_SERVICES.name": "Банковское обслуживание",
