feat(condo): DOMA-5717 create generate bank account report worker task

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -540,6 +540,7 @@
   "pages.condo.property.report.visibility.hidden": "Residents don't see the report",
   "pages.condo.property.report.visibility.visible.description": "Now residents of this property can see the report in Doma app",
   "pages.condo.property.report.visibility.hidden.description": "Residents of this property can't see the report in Doma app anymore",
+  "pages.condo.property.report.createReport.title": "Create report",
   "pages.condo.property.ImportTitle": "properties",
   "pages.condo.property.id.propertyInformationTitle": "About property",
   "pages.condo.property.id.propertyReportTitle": "Property report",
@@ -909,13 +910,13 @@
   "pages.users.status.Rejected": "User has rejected the invitation.",
   "pages.users.status.WaitAcceptOrReject": "User registered, waiting for an accept/reject action",
   "pages.users.UserIsAlreadyInList": "The user is already in user list",
-  "pages.banking.removeModal.contractor.title": "Удалить {count, plural, one {контрагента} other {контрагентов}} и {count, plural, one {его} other {их}} транзакции?",
-  "pages.banking.removeModal.contractor.description": "Все транзакции {count, plural, one {этого контрагента} other {этих контрагентов}} также будут удалены",
-  "pages.banking.removeModal.transaction.title": "Удалить {count, plural, one {транзакцию} other {транзакции}}?",
-  "pages.banking.removeModal.transaction.description": "Восстановить {count, plural, one {ее} other {данные}} будет невозможно",
+  "pages.banking.removeModal.contractor.title": "Remove {count, plural, one {contractor} other {contractors}} и {count, plural, one {his} other {their}} transactions?",
+  "pages.banking.removeModal.contractor.description": "All transactions {count, plural, one {this contractor} other {this contractors}} will also be deleted",
+  "pages.banking.removeModal.transaction.title": "Remove {count, plural, one {transaction} other {transactions}}?",
+  "pages.banking.removeModal.transaction.description": "Data recovery {count, plural, one {ее} other {data}} will be impossible",
   "pages.banking.uploadTransactionsFile": "Upload file with transactions",
   "pages.banking.categoryNotSet": "Category not set",
-  "pages.banking.table.notSet": "Не определена",
+  "pages.banking.table.notSet": "Not defined",
   "pages.banking.chooseCategory": "Choose category",
   "pages.banking.categoryProgress.title": "Choose categories related to the {entity}",
   "pages.banking.categoryProgress.title.transaction": "transactions",
@@ -1239,6 +1240,9 @@
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
   "tasks.BankSyncTask.progress.description.processing": "Importing: {imported} из {total}",
   "tasks.BankSyncTask.progress.description.completed": "Import complete",
+  "tasks.BankReportTask.progress.title": "Creating a report",
+  "tasks.BankReportTask.progress.description.processing": "Collecting data for your report",
+  "tasks.BankReportTask.progress.description.completed": "Report creation completed",
   "tasks.ContactExportTask.progress.title": "Exporting contacts",
   "tasks.ContactExportTask.progress.description.preparing": "Preparing to export contacts",
   "tasks.ContactExportTask.progress.description.processing": "Contacts exported: {exported} of {total}",
