--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -540,6 +540,7 @@
   "pages.condo.property.report.visibility.hidden": "Жители не видят отчет",
   "pages.condo.property.report.visibility.visible.description": "Теперь жители этого дома видят отчет в приложении Doma",
   "pages.condo.property.report.visibility.hidden.description": "Жители этого дома больше не видят отчет в приложении Doma",
+  "pages.condo.property.report.createReport.title": "Создать отчет",
   "pages.condo.property.ImportTitle": "домов",
   "pages.condo.property.id.propertyInformationTitle": "О доме",
   "pages.condo.property.id.propertyReportTitle": "Отчет по дому",
@@ -1239,6 +1240,9 @@
   "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.BankSyncTask.progress.description.processing": "Импортированно записей: {imported} из {total}",
   "tasks.BankSyncTask.progress.description.completed": "Файл импортирован",
+  "tasks.BankReportTask.progress.title": "Создание отчета",
+  "tasks.BankReportTask.progress.description.processing": "Собираем данные для отображения",
+  "tasks.BankReportTask.progress.description.completed": "Отчет создан",
   "tasks.ContactExportTask.progress.title": "Выгрузка контактов",
   "tasks.ContactExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.ContactExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
