fix(condo): DOMA-5235 added localized-dependent import templates to contact, property, ticket and meter reading imports

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -946,6 +946,10 @@
   "pages.banking.report.validation.notUnique": "Property can be connected to a single bank account. Please change property",
   "pages.banking.report.syncSuccess.title": "Property reports created",
   "pages.banking.report.syncSuccess.description": "Total amount: {count}",
+  "property.import.column.Address": "Address",
+  "property.import.column.Units": "Units",
+  "property.import.column.Sections": "Sections",
+  "property.import.column.Floors": "Floors",
   "EmployeeRoles": "Employee roles",
   "EmployeeRoles.availableTickets": "Which tickets the employee sees",
   "EmployeeRoles.availableTickets.allTickets": "all tickets",
@@ -1294,13 +1298,13 @@
   "contact.ConfirmDeleteTitle": "Delete contact?",
   "contact.ConfirmDeleteMessage": "This contact will be deleted forever",
   "contact.ContactDuplicateError": "Contact with this phone number is already registered in this room",
-  "contact.import.column.Address": "«Address»",
-  "contact.import.column.Unit": "«Unit number»",
-  "contact.import.column.UnitType": "«Unit type»",
-  "contact.import.column.Phone": "«Phone»",
-  "contact.import.column.Name": "«Full name»",
-  "contact.import.column.Email": "«Email»",
-  "contact.import.column.Role": "«Role»",
+  "contact.import.column.Address": "Address",
+  "contact.import.column.Unit": "Unit Name",
+  "contact.import.column.UnitType": "Unit Type",
+  "contact.import.column.Phone": "Phones",
+  "contact.import.column.Name": "Full name",
+  "contact.import.column.Email": "Email",
+  "contact.import.column.Role": "Role",
   "contact.form.prompt.title": "Do not save contact?",
   "contact.form.prompt.message": "Contact will not be saved if you leave the page.",
   "focus.tooltipText": "Now you can go to next step",
