--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -946,6 +946,10 @@
   "pages.banking.report.validation.notUnique": "Дом может быть привязан только к одному Рсч. Поменяйте дом",
   "pages.banking.report.syncSuccess.title": "Отчеты по домам созданы",
   "pages.banking.report.syncSuccess.description": "Количество: {count}",
+  "property.import.column.Address": "Адрес",
+  "property.import.column.Units": "Помещений",
+  "property.import.column.Sections": "Подъездов",
+  "property.import.column.Floors": "Этажей",
   "EmployeeRoles": "Роли сотрудников",
   "EmployeeRoles.availableTickets": "Какие заявки видит сотрудник",
   "EmployeeRoles.availableTickets.allTickets": "все заявки",
@@ -1294,13 +1298,13 @@
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ContactDuplicateError": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
-  "contact.import.column.Address": "«Адрес»",
-  "contact.import.column.Unit": "«Номер помещения»",
-  "contact.import.column.UnitType": "«Тип помещения»",
-  "contact.import.column.Phone": "«Телефон»",
-  "contact.import.column.Name": "«ФИО»",
-  "contact.import.column.Email": "«E-mail»",
-  "contact.import.column.Role": "«Роль»",
+  "contact.import.column.Address": "Адрес",
+  "contact.import.column.Unit": "Номер помещения",
+  "contact.import.column.UnitType": "Тип помещения",
+  "contact.import.column.Phone": "Телефон",
+  "contact.import.column.Name": "ФИО",
+  "contact.import.column.Email": "E-mail",
+  "contact.import.column.Role": "Роль",
   "contact.form.prompt.title": "Не сохранять контакт?",
   "contact.form.prompt.message": "Контакт не сохранится, если вы уйдете со страницы.",
   "focus.tooltipText": "Теперь вы можете перейти к следующему шагу",
