refactor(condo): DOMA-5851 refactor mobile layouts

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -158,6 +158,8 @@
   "filters.UserName": "Full Name",
   "FooterText": "Have any questions? Please email us at {email}\nor call {phone}",
   "From": "from",
+  "form.prompt.title": "Do not save changes?",
+  "form.prompt.message": "Changes will not be saved if you leave the page.",
   "FullscreenExit": "Exit Fullscreen",
   "FullscreenRequest": "Fullscreen",
   "GoToLogin": "GoToLogin",
@@ -1299,6 +1301,8 @@
   "contact.import.column.Name": "«Full name»",
   "contact.import.column.Email": "«Email»",
   "contact.import.column.Role": "«Role»",
+  "contact.form.prompt.title": "Do not save contact?",
+  "contact.form.prompt.message": "Contact will not be saved if you leave the page.",
   "focus.tooltipText": "Now you can go to next step",
   "onboarding.title": "Where to begin?",
   "onboarding.subtitle": "These tips will help you get to know the product faster.",
