--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -158,6 +158,8 @@
   "filters.UserName": "Фамилия Имя Отчество",
   "FooterText": "Возникли вопросы? Напишите на {email} или позвоните по телефону {phone}",
   "From": "с",
+  "form.prompt.title": "Не сохранять изменения?",
+  "form.prompt.message": "Изменения не сохранятся, если вы уйдете со страницы.",
   "FullscreenExit": "Свернуть",
   "FullscreenRequest": "На весь экран",
   "GoToLogin": "Перейти на страницу входа",
@@ -1299,6 +1301,8 @@
   "contact.import.column.Name": "«ФИО»",
   "contact.import.column.Email": "«E-mail»",
   "contact.import.column.Role": "«Роль»",
+  "contact.form.prompt.title": "Не сохранять контакт?",
+  "contact.form.prompt.message": "Контакт не сохранится, если вы уйдете со страницы.",
   "focus.tooltipText": "Теперь вы можете перейти к следующему шагу",
   "onboarding.title": "С чего начать?",
   "onboarding.subtitle": "Данные подсказки помогут вам быстрее познакомиться с продуктом",
