feat(condo): DOMA-5941 modify BankSyncTask to use to start syncTransactionsTask (#3212)
* refactor(condo): DOMA-5941 refactor requestTransactions fn and task

* feat(condo): DOMA-5941 create BankTransactionsSyncTask entity

* feat(condo): DOMA-5941 modify BankSyncTask to use to start any tasks from banking domain

* feat(condo): DOMA-5941 Revert 'create BankTransactionsSyncTask entity'

This reverts commit a29fe860

* feat(condo): DOMA-5941 add migration. Write special v of transaction sync task. Add test

* chore(condo): DOMA-5941 regenerate migration

* chore(condo): DOMA-5941 fix random tests

* chore(condo): DOMA-5941 added message for user to gqlerror in BankSyncTask

* refactor(condo): DOMA-5941 move check integration into beforeChange. Fix codeStyle of BANK_SYNC_TASK_OPTIONS_FIELDS into gql

* chore(condo): DOMA-5941 use isValid() instead of comparing

* refactor(condo): DOMA-5941 move date validation to ajv

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1499,6 +1499,10 @@
   "api.banking.importBankTransactions.SOMETHING_WENT_WRONG": "Что-то пошло не так. Попробуйте снова или обратитесь тех-поддержку",
   "api.banking.importBankTransactions.ANOTHER_INTEGRATION_IS_USED": "К данному счёту подключена другая интеграция, которая получает транзакции другим способом. В данном случае нельзя использовать получение транзакций из файла",
   "api.banking.importBankTransactions.BANK_ACCOUNT_HAS_NO_INTEGRATION": "Для данной операции импорта был найден расчётный счёт с id=\"{id}\", у которого нет интеграциии. Это значит что данный счёт мог использоваться как-то по-другому. В данном случае он не может использоваться для получения данных из файла",
+  "api.banking.BankSyncTask.WRONG_INTEGRATION": "Неверная интеграция",
+  "api.banking.BankSyncTask.INVALID_DATE": "Некорректная дата начала или конца выписки",
+  "api.banking.BankSyncTask.INCORRECT_DATE_INTERVAL": "Некорректный период",
+  "api.banking.BankSyncTask.ACCOUNT_IS_REQUIRED": "Требуется расчетный счет",
   "api.user.PASSWORD_IS_TOO_SHORT": "Длина введённого пароля меньше {min} символов",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "Пароль слишком простой. Нужно использовать что-то более безопасное",
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
