--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1499,6 +1499,10 @@
   "api.banking.importBankTransactions.SOMETHING_WENT_WRONG": "Something went wrong. Try again or ask support",
   "api.banking.importBankTransactions.ANOTHER_INTEGRATION_IS_USED": "Another integration is used for this bank account, that fetches transactions in a different way. You cannot import transactions from file in this case",
   "api.banking.importBankTransactions.BANK_ACCOUNT_HAS_NO_INTEGRATION": "For this import operation was found bank account with id=\"{id}\" and it does not have integration. It means that this bank account has been initially used for something different or something goes wrong. In this case it cannot be used to fetch data from file",
+  "api.banking.BankSyncTask.WRONG_INTEGRATION": "Wrong integration",
+  "api.banking.BankSyncTask.INVALID_DATE": "Incorrect start or end date of the statement",
+  "api.banking.BankSyncTask.INCORRECT_DATE_INTERVAL": "Incorrect date interval",
+  "api.banking.BankSyncTask.ACCOUNT_IS_REQUIRED": "Bank account is required",
   "api.user.PASSWORD_IS_TOO_SHORT": "Password length is less then {min} characters",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "This password is weak or too obvious please choose something more secure",
   "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
