fix(condo): DOMA-5992 fixed minor bugs: * fix(condo): DOMA-5249 fixed property import with not full address * fix(condo): DOMA-5497 fixed sorting meter table * fix(condo): DOMA-5705 was hidden SearchByPhoneNumber for contractor * fix(condo): DOMA-5764 fixed year validation on property create/edit page * fix(condo): DOMA-5704 fixed sidebar for contractor * fix(condo): DOMA-5734 added example for property import * fix(condo): DOMA-5686 fixed translates

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1461,6 +1461,7 @@
   "errors.LoadingError": "Sorry, an error has occurred, please try refreshing the page",
   "errors.import.IncorrectRowFormat": "Incorrect row format",
   "errors.import.AddressNotFound": "The building with the given address was not found in the address database",
+  "errors.import.AddressValidationError": "It doesn't look like a house address. Check if you have specified everything correctly.",
   "errors.import.PropertyNotFound": "There's no property with this address in your organization",
   "errors.import.PropertyDuplicate": "Your organization already got property with same address",
   "errors.import.IncorrectContactName": "Incorrect contact name",
