--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -925,7 +925,7 @@
   "pages.banking.categoryNotSet": "Категория не определена",
   "pages.banking.table.notSet": "Не определена",
   "pages.banking.chooseCategory": "Выберите категорию",
-  "pages.banking.categoryProgress.title": "Выберите соответсвующие {entity} категории",
+  "pages.banking.categoryProgress.title": "Выберите соответствующие {entity} категории",
   "pages.banking.categoryProgress.title.transaction": "транзакциям",
   "pages.banking.categoryProgress.title.contractor": "контрагентам",
   "pages.banking.categoryProgress.description": "{percent}% без категории",
@@ -1461,6 +1461,7 @@
   "errors.LoadingError": "К сожалению произошла ошибка, попробуйте обновить страницу",
   "errors.import.IncorrectRowFormat": "Некорректный формат строки",
   "errors.import.AddressNotFound": "Строение с данным адресом не найдено в базе адресов",
+  "errors.import.AddressValidationError": "Это не похоже на адрес дома. Проверьте, всё ли вы правильно указали.",
   "errors.import.PropertyNotFound": "В вашей организации нет строения с данным адресом",
   "errors.import.PropertyDuplicate": "В вашей организации уже есть дом с данным адресом",
   "errors.import.IncorrectContactName": "Некорректное имя контакта",
