feat(condo): DOMA-5993 added incident export task
* chore(condo): DOMA-5993 updated submodules

* fix(condo): DOMA-5993 fixed classifiers reset on the incident creation page when text is printed in the input field

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1283,6 +1283,10 @@
   "tasks.ContactExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.ContactExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.ContactExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
+  "tasks.IncidentExportTask.progress.title": "Выгрузка отключений",
+  "tasks.IncidentExportTask.progress.description.preparing": "Подготовка к экспорту",
+  "tasks.IncidentExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
+  "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
   "OK": "Хорошо",
   "Title": "Заголовок",
   "profile": "Профиль",
@@ -1555,6 +1559,8 @@
   "api.organization.reInviteOrganizationEmployee.ALREADY_ACCEPTED_INVITATION": "Указанный сотрудник уже принял приглашение",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Неверное значение propertyId. Данный дом не принадлежит выбранной организации",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "Окончание работ не может быть раньше начала",
+  "api.incidentExportTask.STATUS_IS_ALREADY_COMPLETED": "Задача уже успешно выполнена",
+  "api.incidentExportTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Дата актуальности новости обязательна",
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "Нельзя редактировать уже отправленную новость",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "Дата актуальности меньше чем дата отправки",
@@ -1696,10 +1702,11 @@
   "excelExport.headers.propertyScopes.name": "Название области видимости",
   "excelExport.headers.propertyScopes.properties": "Дома",
   "excelExport.headers.propertyScopes.employees": "Сотрудники",
-  "excelExport.headers.incidents.title": "Выгрузка отключений",
+  "excelExport.headers.incidents.title": "Выгрузка отключений за все время",
+  "excelExport.headers.incidents.forPeriod.title": "Выгрузка отключений за период",
   "excelExport.headers.incidents.number": "Номер отключения",
   "excelExport.headers.incidents.addresses": "Адреса",
-  "excelExport.headers.incidents.classifiers": "Классификаторы",
+  "excelExport.headers.incidents.classifiers": "Классификатор",
   "excelExport.headers.incidents.details": "Описание",
   "excelExport.headers.incidents.status": "Статус",
   "excelExport.headers.incidents.workStart": "Начало работ",
