--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1283,6 +1283,10 @@
   "tasks.ContactExportTask.progress.description.preparing": "Preparing to export contacts",
   "tasks.ContactExportTask.progress.description.processing": "Contacts exported: {exported} of {total}",
   "tasks.ContactExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
+  "tasks.IncidentExportTask.progress.title": "Exporting incidents",
+  "tasks.IncidentExportTask.progress.description.preparing": "Preparing to export incidents",
+  "tasks.IncidentExportTask.progress.description.processing": "Incidents exported: {exported} of {total}",
+  "tasks.IncidentExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
   "OK": "OK",
   "Title": "Title",
   "profile": "Profile",
@@ -1555,6 +1559,8 @@
   "api.organization.reInviteOrganizationEmployee.ALREADY_ACCEPTED_INVITATION": "Specified employee has already accepted invitation",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
   "api.incident.WORK_FINISH_EARLY_THAN_WORK_START": "The end of the works cannot be earlier than the start",
+  "api.incidentExportTask.STATUS_IS_ALREADY_COMPLETED": "Task already completed successfully",
+  "api.incidentExportTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "You cannot edit the news item which already been sent",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
@@ -1696,7 +1702,8 @@
   "excelExport.headers.propertyScopes.name": "Property scope name",
   "excelExport.headers.propertyScopes.properties": "Properties",
   "excelExport.headers.propertyScopes.employees": "Employees",
-  "excelExport.headers.incidents.title": "Incidents export",
+  "excelExport.headers.incidents.title": "Contacts for all time",
+  "excelExport.headers.incidents.forPeriod.title": "Incidents for the period",
   "excelExport.headers.incidents.number": "Number",
   "excelExport.headers.incidents.addresses": "Addresses",
   "excelExport.headers.incidents.classifiers": "Classifiers",
