--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1519,7 +1519,7 @@
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_PASSWORD": "Неверный пароль",
   "api.user.authenticateUserWithPhoneAndPassword.USER_NOT_FOUND": "Пользователь не найден по указанному телефону",
   "api.user.changePhoneNumberResidentUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Токен для смены телефона недействителен или просрочен, попробуйте повторить процедуру смены телефона заново.",
-  "api.user.changePhoneNumberResidentUser.USER_HAS_CONNECTED_EXTERNAL_IDENTITY_WITH_DIFFERENT_PHONE": "Не возможно изменить номер телефона, так как пользователь авторизован в внешней системе под другим номером телефона.",
+  "api.user.changePhoneNumberResidentUser.USER_HAS_CONNECTED_EXTERNAL_IDENTITY_WITH_DIFFERENT_PHONE": "Невозможно изменить номер телефона, так как пользователь авторизован во внешней системе под другим номером телефона.",
   "api.user.checkPasswordRecoveryToken.TOKEN_NOT_FOUND": "Токен на смену пароля не найден либо просрочен. Попробуйте пройти процедуру смены пароля заново.",
   "api.user.startPasswordRecovery.USER_NOT_FOUND": "Не найден пользователь, для которого требуется восстановить доступ",
   "api.user.startPasswordRecovery.MULTIPLE_USERS_FOUND": "Что-то пошло не так. Обратитесь в техническую поддержку",
