feat(condo): DOMA-5742 add emails validation (#3229)
* feat(condo): DOMA-5742 add emails validation

* refactor(condo): DOMA-5742 fixed translation id

* fix(condo): DOMA-5742 fixed regex

* refactor(condo): DOMA-5742 moved regex to constants

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -202,6 +202,7 @@
   "global.select.deletedOption": "Deleted",
   "global.filters.dateRange.start": "Start date",
   "global.filters.dateRange.end": "Final date",
+  "global.input.error.wrongEmails": "Wrong format of E-mail addresses",
   "miniapps.catalog.banner.more": "More",
   "miniapps.catalog.noServicesInCategory": "There are no services in this category yet",
   "miniapps.catalog.noServicesFound": "There is no such service",
