--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -202,6 +202,7 @@
   "global.select.deletedOption": "Удалено",
   "global.filters.dateRange.start": "Начальная дата",
   "global.filters.dateRange.end": "Конечная дата",
+  "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
   "miniapps.catalog.banner.more": "Подробнее",
   "miniapps.catalog.noServicesInCategory": "Сервисов в этой категории пока нет",
   "miniapps.catalog.noServicesFound": "Такого сервиса нет",
