DOMA-5968 bank transaction upload period select

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -947,6 +947,11 @@
   "pages.banking.report.validation.notUnique": "Property can be connected to a single bank account. Please change property",
   "pages.banking.report.syncSuccess.title": "Property reports created",
   "pages.banking.report.syncSuccess.description": "Total amount: {count}",
+  "pages.banking.report.sbbolSyncTitle": "Sync transactions data",
+  "pages.banking.report.sbbolSyncModal.title": "Specify sync period",
+  "pages.banking.report.sbbolSyncModal.description": "Specify sync period, for which you want to download transactions:",
+  "pages.banking.report.sbbolSyncModalHint.title": "What will happen to previously uploaded transactions?",
+  "pages.banking.report.sbbolSyncModalHint.description": "They will remain untouched. There will be no duplicates",
   "property.import.column.Address": "Address",
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
