--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -947,6 +947,11 @@
   "pages.banking.report.validation.notUnique": "Дом может быть привязан только к одному Рсч. Поменяйте дом",
   "pages.banking.report.syncSuccess.title": "Отчеты по домам созданы",
   "pages.banking.report.syncSuccess.description": "Количество: {count}",
+  "pages.banking.report.sbbolSyncTitle": "Загрузить данные по транзакциям",
+  "pages.banking.report.sbbolSyncModal.title": "Выберите период для загрузки",
+  "pages.banking.report.sbbolSyncModal.description": "Выберите период, за который хотите загрузить транзакции:",
+  "pages.banking.report.sbbolSyncModalHint.title": "Что будет с ранее загруженными транзакциями?",
+  "pages.banking.report.sbbolSyncModalHint.description": "Они останутся нетронутыми. Дублей не будет.",
   "property.import.column.Address": "Адрес",
   "property.import.column.Units": "Помещений",
   "property.import.column.Sections": "Подъездов",
