feat(condo): DOMA-6023 added global hints
feat(ui): DOMA-6023 updated Banner and Carousel

feat(helm): DOMA-6023 updated helm - added "global_hints" variable

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -207,6 +207,9 @@
   "global.filters.dateRange.start": "Start date",
   "global.filters.dateRange.end": "Final date",
   "global.input.error.wrongEmails": "Wrong format of E-mail addresses",
+  "global.globalHints.canDisableHints": "You can disable these hints in",
+  "global.globalHints.canDisableHints.inProfile": "profile",
+  "global.globalHints.banner.more": "More",
   "miniapps.catalog.banner.more": "More",
   "miniapps.catalog.noServicesInCategory": "There are no services in this category yet",
   "miniapps.catalog.noServicesFound": "There is no such service",
@@ -852,6 +855,7 @@
   "pages.condo.settings.propertyScope.alert.delete.Message": "It will be impossible to restore. But it will be possible to create again.",
   "pages.condo.profile.interfaceLanguage": "Language",
   "pages.condo.profile.chooseInterfaceLanguage": "Choose language",
+  "pages.condo.profile.globalHints": "Hints in sections",
   "pages.index.PageTitle": "Analytics",
   "pages.organizations.CreateOrganizationMessage": "Creating new organization",
   "pages.condo.analytics.index.PageTitle": "Analytics for supervisors",
