--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -207,6 +207,9 @@
   "global.filters.dateRange.start": "Начальная дата",
   "global.filters.dateRange.end": "Конечная дата",
   "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
+  "global.globalHints.canDisableHints": "Отключить эти подсказки можно в",
+  "global.globalHints.canDisableHints.inProfile": "профиле",
+  "global.globalHints.banner.more": "Как это работает",
   "miniapps.catalog.banner.more": "Подробнее",
   "miniapps.catalog.noServicesInCategory": "Сервисов в этой категории пока нет",
   "miniapps.catalog.noServicesFound": "Такого сервиса нет",
@@ -852,6 +855,7 @@
   "pages.condo.settings.propertyScope.alert.delete.Message": "Восстановить будет невозможно. Но можно будет создать снова.",
   "pages.condo.profile.interfaceLanguage": "Язык интерфейса",
   "pages.condo.profile.chooseInterfaceLanguage": "Выберите язык интерфейса",
+  "pages.condo.profile.globalHints": "Подсказки в разделах",
   "pages.index.PageTitle": "Аналитика",
   "pages.organizations.CreateOrganizationMessage": "Давайте создадим вашу управляющую компанию",
   "pages.condo.analytics.index.PageTitle": "Аналитика для руководителей",
