feat(condo): DOMA-5652 tasks for sending notifications

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1187,6 +1187,9 @@
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Bills were successfully paid",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_FAILURE_RESULT_MESSAGE.push.title": "Failed to pay for bills",
   "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Automatic payment of receipts scheduled for tomorrow",
+  "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
   "ticket.EmptyList.header": "The list of applications is still empty",
@@ -1564,6 +1567,7 @@
   "api.incidentExportTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "You cannot edit the news item which already been sent",
+  "api.newsItem.EDIT_DENIED_PUBLISHED": "You can not edit published news item",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
