fix(condo): DOMA-6068 add split bankaccount report card title by categories & handle external import at banksynctaskuiinterface

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -556,7 +556,8 @@
   "pages.condo.property.id.propertyReportBalance.buttonTitle": "Open report",
   "pages.condo.property.id.propertyReport.totalSumTitle": "All {sumItem}",
   "pages.condo.property.id.propertyReport.chooseReportTitle": "Choose report",
-  "pages.condo.property.id.propertyReport.reportCardTitle": "Property expenses items",
+  "pages.condo.property.id.propertyReport.reportCardTitle.withdrawal": "Expenses by category",
+  "pages.condo.property.id.propertyReport.reportCardTitle.income": "Incomes by category",
   "pages.condo.property.id.becomeSberClientTitle": "Become Sber client",
   "pages.condo.property.id.setupReportTitle": "Setup report",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Enter value",
@@ -1275,10 +1276,12 @@
   "tasks.TicketExportTask.progress.description.preparing": "Preparing for export",
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
   "tasks.TicketExportTask.progress.description.completed": "File has been created and downloaded was started",
-  "tasks.BankSyncTask.progress.title": "Importing transactions from file",
+  "tasks.BankSyncTask.file.progress.title": "Importing transactions from file",
+  "tasks.BankSyncTask.externalSystem.progress.title": "Importing transactions from SBBOL",
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
   "tasks.BankSyncTask.progress.description.processing": "Importing: {imported} из {total}",
-  "tasks.BankSyncTask.progress.description.completed": "Import complete",
+  "tasks.BankSyncTask.file.progress.description.completed": "Import complete",
+  "tasks.BankSyncTask.externalSystem.progress.description.completed": "Bank account data was successfully imported from SBBOL",
   "tasks.BankReportTask.progress.title": "Creating a report",
   "tasks.BankReportTask.progress.description.processing": "Collecting data for your report",
   "tasks.BankReportTask.progress.description.completed": "Report creation completed",
