--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -556,7 +556,8 @@
   "pages.condo.property.id.propertyReportBalance.buttonTitle": "Открыть отчет",
   "pages.condo.property.id.propertyReport.totalSumTitle": "Все {sumItem}",
   "pages.condo.property.id.propertyReport.chooseReportTitle": "Выберите отчет",
-  "pages.condo.property.id.propertyReport.reportCardTitle": "Статьи расходов по дому",
+  "pages.condo.property.id.propertyReport.reportCardTitle.withdrawal": "Расходы по категориям",
+  "pages.condo.property.id.propertyReport.reportCardTitle.income": "Поступления по категориям",
   "pages.condo.property.id.becomeSberClientTitle": "Стать клиентом Сбера",
   "pages.condo.property.id.setupReportTitle": "Настроить отчет",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
@@ -1275,10 +1276,12 @@
   "tasks.TicketExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.TicketExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.TicketExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
-  "tasks.BankSyncTask.progress.title": "Импорт транзакций из файла",
+  "tasks.BankSyncTask.file.progress.title": "Импорт транзакций из файла",
+  "tasks.BankSyncTask.externalSystem.progress.title": "Импорт транзакций из СберБизнес",
   "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.BankSyncTask.progress.description.processing": "Импортированно записей: {imported} из {total}",
-  "tasks.BankSyncTask.progress.description.completed": "Файл импортирован",
+  "tasks.BankSyncTask.file.progress.description.completed": "Файл импортирован",
+  "tasks.BankSyncTask.externalSystem.progress.description.completed": "Данные по расчётным счетам загружены из СберБизнес",
   "tasks.BankReportTask.progress.title": "Создание отчета",
   "tasks.BankReportTask.progress.description.processing": "Собираем данные для отображения",
   "tasks.BankReportTask.progress.description.completed": "Отчет создан",
